--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-ts-rating-star": "^1.0.4",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
