After a customized caliper

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "gh-pages": "^6.3.0",
     "react": "^18.3.1",
+    "react-alice-carousel": "^2.9.1",
     "react-dom": "^18.3.1",
     "react-ts-rating-star": "^1.0.4",
     "styled-components": "^6.1.13"
