--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@smastrom/react-rating": "^1.5.0",
     "gh-pages": "^6.3.0",
     "react": "^18.3.1",
     "react-alice-carousel": "^2.9.1",
