--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@types/react-scroll": "^1.8.10",
     "gh-pages": "^6.3.0",
     "react": "^18.3.1",
     "react-alice-carousel": "^2.9.1",
     "react-dom": "^18.3.1",
+    "react-scroll": "^1.9.3",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
