--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@types/react-scroll": "^1.8.10",
     "framer-motion": "^12.12.1",
     "gh-pages": "^6.3.0",
